# prisma

./: CMakeLists.txt  README.md
DMatrix/: CMakeLists.txt  DMatrixLinkDef.h  cauchyIntMultiPole.cc  cauchyIntMultiPole.h  cauchyIntegral.cc  cauchyIntegral.h  mcPhaseSpace.cc  nBodyPhaseSpaceGen.cc  testDMatrix.cc  testKMatrix.C  testMassDep.cc  testRescat.cc
cmakeModules/: CMakeCache.txt  FindROOT.cmake
